Fix root node clipping into secondary animation description

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,10 +17,12 @@ body {
 }
 
 .header {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
   background-color: rgb(0 85 85);
+  height: 6em;
 }
 
 .header h1 {
@@ -83,7 +85,9 @@ body {
 }
 
 canvas {
-  flex: 1;
+  position: absolute;
+  top: 6em;
+  left: 0;
   width: 100%;
   height: 100%;
 }
